# SXAG025

./: .env  .gitignore  access.py  clustering.py  compiler.py  corpus.py  critic_agent.py  graphify_node.py  graphify_test_results.json  main.py  nlp_graphify.py  planner.py  requirements.txt  synth_agent.py  synthesizer.py  visualization.py
workflows/: pyproject.toml
workflows/.adk/: session.db
workflows/Agentic_workflow/: __init__.py  agent.py
workflows/Agentic_workflow/.adk/: session.db
workflows/Agentic_workflow/Graph_Extractor/: agent.py
workflows/Agentic_workflow/Graph_Extractor/.adk/: session.db
workflows/Agentic_workflow/PhaseOne/: phaseOne_agent.py
workflows/Agentic_workflow/PhaseOne/.adk/: session.db
workflows/Agentic_workflow/PhaseOne/Planner/: retreival_tool.py
workflows/Agentic_workflow/PhaseOne/Planner/.adk/: session.db
workflows/Agentic_workflow/PhaseOne/Raw_processing/: agent.py  fetcher.py  mmr.py
workflows/Agentic_workflow/PhaseTwo/Graph_Extractor/: agent.py  cluster_graph.py  extract_knowledge.py
workflows/Agentic_workflow/Planner/: agent.py
